Release v0.0.6; Fix issues of line-break in Source Hightlight Block.

--- a/src/renderer/styles/MdViewer.css
+++ b/src/renderer/styles/MdViewer.css
@@ -94,7 +94,7 @@ pre {
 code {
   font-family: Consolas, Monaco, Andale Mono, monospace;
   line-height: 1.5;
-  font-size: 13px;
+  font-size: inherit;
 }
 aside {
   display: block;
